# foodbasket

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.sqlx/: query-0135cb1066645a95679353ebf1888415d327d62f0700b5ee3c2720c2f568418c.json  query-03e209597addc952581d5e41ac2b28949ef106cfe5b7fc6354a9933d1ae8697c.json  query-296e1a1c0b69e4ba4eb18b6d97840883d3e4a286764bf29125ad1a2d7bbb132f.json  query-35d44b74eb1288a8e79a3e4c9c939785f8a744079f6d1cf28dd94ea0e771b2fa.json  query-38ca06b69839b42ff047362c9d7f28e3abb00c025ad93e16bc2aba27d1c9ac71.json  query-3bc9e32d12f962932be92e41b5161b0ca70688eedfeb20144cfdc40e9456ce7b.json  query-3e320f021f38b70d25f6787678a69cab5446ae92e65af1e7f75bec6c8de39955.json  query-4960382318aa1d8879eaefb58d2b9b737db87776f7769b7d11a4dcb6f83bb821.json  query-57e454ae6e23ba99faba274feef669a93e0710f4b4d8b32b9321d5e310d75448.json  query-5b3d6248e097a57011b4c7e77e548127f8dcfaf995128c923478a9c45cf5f0ee.json  query-5dde77fa280fadc72692f4dd6b49bf86776808c0b6ab16763ab2f865d77a1235.json  query-691d8c21bcc713c00381586aa07229d2e6e6f9f55c7a018b76863bfdec6d489e.json  query-8097ef4d4f96c59203e7155e1510b4c4cc665c343f3ce1b281dcf64c7cb911c3.json  query-891ee1ae170d52bc442278123e7c0a2f096f186011721b79cf58cca163666cbf.json  query-8d2628ac372b9422a1d0cac4c92f26475009b0b5c899b9381b76baef60d23d11.json  query-8e007062a6c00051c720298861adb9803540533c05d54ce61f58af38ea4d270d.json  query-8f92cafed89696accccdb0e38e8316856659fe4f4bbfa617e3033a0fc7c4ac96.json  (+15 more)
.zed/: tasks.json
apps/backend-rs/: .dockerignore  .env.example  Cargo.toml  Dockerfile  atlas.hcl  schema.sql
apps/backend-rs/.sqlx/: query-0ecc7aa98a6ab14536f3422c1350c1b84a8ffdae62a0785306cc2381fe36fc7c.json  query-5b3d6248e097a57011b4c7e77e548127f8dcfaf995128c923478a9c45cf5f0ee.json  query-d538beddb3834e079b5814e31d355a7db8ace2af5126c0188c6e24d7766d9dea.json
apps/backend-rs/migrations/: 20260202213947.sql  20260224172741_init.sql  20260225083327_default_random_uuid.sql  20260227174034_init_rbac.sql
apps/backend-rs/src/: app.rs  cache_keys.rs  error.rs  main.rs
apps/backend-rs/src/api/: responses.rs
apps/backend-rs/src/app/: mod.rs
apps/backend-rs/src/models/: dtos.rs  mod.rs
apps/backend-rs/src/repo/: users.rs
apps/backend-rs/src/repos/: users.rs
apps/backend-rs/src/routes/: mod.rs
apps/backend-rs/src/routes/auth/: dto.rs  dtos.rs  handler.rs  mod.rs
apps/backend-rs/src/routes/debug/: dtos.rs  handler.rs  mod.rs
apps/backend-rs/src/routes/health/: handler.rs  mod.rs
apps/backend-rs/src/services/: mod.rs  passwords.rs  random.rs  sessions.rs  tenants.rs  users.rs
docs/: LICENSE  _config.yml  index.md
(+193 files in other folders)
