[package]
name = "foodbasket-backend"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["password-hash"] }
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
rand = { version = "0.10.0", features = ["thread_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
