[package]
name = "backend-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
axum = "0.8.8"
dotenvy = "0.15.7"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
validator = { version = "0.20.0", features = ["derive"] }
