[package]
name = "foodbasket"
version = "0.0.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
fred = { version = "10.1.0", features = ["serde-json", "mocks"] }
http = "1.4.0"
password-hash = "0.5.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "migrate",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-cookies = "0.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
